--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 osx_image: xcode7
 xcode_project: ContactsApp.xcodeproj
-xcode_scheme: ConcatsApp Test
+xcode_scheme: ContactsApp
